Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113717

QComboBox::removeItem is triggering QComboBox::currentTextChanged.

XMLWordPrintable

    • 9195438a5 (dev), 56598b65f (6.6)

      QComboBox::removeItem is triggering QComboBox::currentTextChanged even when current text of the combo box is same as before.
      This will lead to unexpected behavior if user has connected QComboBox::currentTextChanged signal to a slot performing some other action.

      The problem can be reproduced using the attached code.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            viniyogita viniyogita
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes